force-app/main/default/objects/Distribution__c/Distribution__c.object-meta.xml
<CustomObject>
    <description>A Distribution record is a link from a Pending fund to a Standard one.  The specified amount of funds (usually unrestricted by the donor) is considered to be &quot;moved&quot; from the pending fund to the standard fund where it is available for grantmaking.</description>
    <label>Distribution</label>
    <nameField>
        <displayFormat>DIST-{000000}</displayFormat>
        <label>Distribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>