force-app/main/default/objects/Distribution__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount of this distribution</description>
    <inlineHelpText>The amount of this distribution</inlineHelpText>
    <label>Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>