force-app/main/default/objects/Distribution__c/fields/Amount_released__c.field-meta.xml
<CustomField>
    <fullName>Amount_released__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of this distribution that has so far been released, that is, the sum of linked charges</description>
    <inlineHelpText>The amount of this distribution that has so far been released, that is, the sum of linked charges</inlineHelpText>
    <label>Amount released</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>