force-app/main/default/objects/Distribution__c/fields/Carryover__c.field-meta.xml
<CustomField>
    <fullName>Carryover__c</fullName>
    <description>The amount from a distribution for the previous fiscal year that is carried over to this distribution</description>
    <inlineHelpText>The amount from a distribution for the previous fiscal year that is carried over to this distribution</inlineHelpText>
    <label>Carryover</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>