force-app/main/default/objects/Distribution__c/fields/ChartofAccounts__c.field-meta.xml
<CustomField>
    <fullName>ChartofAccounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This distribution&apos;s chart of accounts record</description>
    <inlineHelpText>This distribution&apos;s chart of accounts record</inlineHelpText>
    <label>ChartofAccounts</label>
    <referenceTo>ChartofAccounts__c</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>