force-app/main/default/objects/Distribution__c/fields/Fiscal_year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_year__c</fullName>
    <description>The fiscal year to which this distribution applies</description>
    <inlineHelpText>The fiscal year to which this distribution applies</inlineHelpText>
    <label>Fiscal year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fiscal_Year</valueSetName>
    </valueSet>
</CustomField>