force-app/main/default/objects/Distribution__c/fields/Source_fund__c.field-meta.xml
<CustomField>
    <fullName>Source_fund__c</fullName>
    <description>The pending fund that is the source of this distribution of funds</description>
    <inlineHelpText>The pending fund that is the source of this distribution of funds</inlineHelpText>
    <label>Source fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>