force-app/main/default/objects/Distribution__c/fields/Target_fund__c.field-meta.xml
<CustomField>
    <fullName>Target_fund__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The standard fund that is the target of this distribution of funds for grantmaking</description>
    <inlineHelpText>The standard fund that is the target of this distribution of funds for grantmaking</inlineHelpText>
    <label>Target fund</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Target fund must have the record type = Standard.</errorMessage>
        <filterItems>
            <field>Fund__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <infoMessage>Choose from among Standard funds</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Distributions (Target fund)</relationshipLabel>
    <relationshipName>Distributions1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>