force-app/main/default/objects/Distribution__c/fields/To_be_released__c.field-meta.xml
<CustomField>
    <fullName>To_be_released__c</fullName>
    <description>The amount of this distribution remaining to be released</description>
    <formula>Amount__c - Amount_released__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of this distribution remaining to be released</inlineHelpText>
    <label>To be released</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>