force-app/main/default/objects/Distribution__c/validationRules/AmountLessThanAmountReleased.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountLessThanAmountReleased</fullName>
    <active>true</active>
    <description>The amount of the distribution may not be less than the amount already released.</description>
    <errorConditionFormula>Amount__c &lt; Amount_released__c</errorConditionFormula>
    <errorMessage>The amount of the distribution may not be less than the amount already released.</errorMessage>
</ValidationRule>