force-app/main/default/objects/Distribution__c/validationRules/PartiallyReleasedNoRelinking.validationRule-meta.xml
<ValidationRule>
    <fullName>PartiallyReleasedNoRelinking</fullName>
    <active>true</active>
    <description>This distribution is partially released and may not be relinked.</description>
    <errorConditionFormula>AND(
 Amount_released__c &gt; 0,
 OR(
  ISCHANGED(Source_fund__c),
  ISCHANGED(Target_fund__c)
 )
)</errorConditionFormula>
    <errorMessage>This distribution is partially released and may not be relinked.</errorMessage>
</ValidationRule>